@@ -32,16 +32,30 @@
 #ifndef _ink_file_h_
 #define	_ink_file_h_
 
+#include "ink_config.h"
+
 #include <stdio.h>
 #include <sys/types.h>
+#include <dirent.h>
+
+#if HAVE_SYS_STATFS_H
+#include <sys/statfs.h>
+#endif
+
+#if HAVE_SYS_STATVFS_H
+#include <sys/statvfs.h>
+#endif
+
+// Darwin keeps statafs(2) in <sys/mount.h> ...
+#if HAVE_SYS_MOUNT_H
+#include <sys/mount.h>
+#endif
 
 /*===========================================================================*
 
                             Function Prototypes
 
  *===========================================================================*/
-
-#include <dirent.h>
 
 // Cause ink_filepath_merge to fail if addpath is above rootpath
 //
